В реквест хендлер получения docid передаётся json объект сериаллизованный из REAttrDataExchangeMessage

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,10 +5,10 @@
 #ot.user=GTFAAV09
 #ot.pswd=Qwerty1
 #ot.opentext.url=http://srv-phg-ukd3.itps.local/OTCS/llisapi.dll
-ot.auth.url=http://localhost:8080/cws/services/Authentication?wsdl
-ot.docmanager.url=http://localhost:8080/cws/services/DocumentManagement?wsdl
-ot.contentservice.url=http://localhost:8080/cws/services/ContentService?wsdl
-ot.otdsauth.url=http://localhost:8080/otdsws/services/Authentication?wsdl
-ot.user=GTFAAV09
-ot.pswd=Qwerty1
-ot.opentext.url=http://c1p2-h2-doti01.codm.gazprom.loc/OTCS/llisapi.dll
+ot.auth.url=http://ot-tl-cs-dev1.ot.dev.local:8080/cws/services/Authentication?wsdl
+ot.docmanager.url=http://ot-tl-cs-dev1.ot.dev.local:8080/cws/services/DocumentManagement?wsdl
+ot.contentservice.url=http://ot-tl-cs-dev1.ot.dev.local:8080/cws/services/ContentService?wsdl
+ot.otdsauth.url=http://ot-tl-cs-dev1.ot.dev.local:8080/otdsws/services/Authentication?wsdl
+ot.user=otadmin@otds.admin
+ot.pswd=Qwerty!234
+ot.opentext.url=http://ot-tl-cs-dev1.ot.dev.local/OTCS/llisapi.dll
