Добавлена поддержка вызова реквест хендлера запуска агента сборки частей

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -11,4 +11,4 @@ ot.contentservice.url=http://ot-tl-cs-dev1.ot.dev.local:8080/cws/services/Conten
 ot.otdsauth.url=http://ot-tl-cs-dev1.ot.dev.local:8080/otdsws/services/Authentication?wsdl
 ot.user=otadmin@otds.admin
 ot.pswd=Qwerty!234
-ot.opentext.url=http://ot-tl-cs-dev1.ot.dev.local/OTCS/llisapi.dll
+ot.opentext.url=http://ot-tl-cs-dev1.ot.dev.local/OTCS/cs.exe
